--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
     "react-scripts": "4.0.3",
