--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-countup": "^4.3.3",
     "react-dom": "^17.0.1",
     "react-elastic-carousel": "^0.11.2",
+    "react-responsive-carousel": "^3.2.18",
     "react-scripts": "4.0.3",
     "react-visibility-sensor": "^5.1.1",
     "styled-components": "^5.2.1",
